--- a/src/scss/pages/payment.scss
+++ b/src/scss/pages/payment.scss
@@ -1,4 +1,11 @@
 .payment {
+  .payment-head {
+    padding-top: 3rem;
+    margin-bottom: 2rem;
+  }
+  .payment-title {
+    margin-bottom: 25px;
+  }
   .payment-card {
     border: 1px solid lightgray;
     padding: 10px;
