--- a/src/scss/pages/rent-gear.scss
+++ b/src/scss/pages/rent-gear.scss
@@ -258,8 +258,7 @@
                 color: $white;
                 margin: 0 10px 0 10px;
                 &:hover {
-                  background-color: $white;
-                  color: $primary-color;
+                  background-color: #f881aa;
                 }
                 &.disabled {
                   background-color: $primary-color-disabled;
