--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -6,6 +6,7 @@
   .checkout-title {
     font-family: Gotham Pro;
     font-size: 49px;
+    font-weight: bold;
     line-height: normal;
     color: #252525;
   }
@@ -20,14 +21,11 @@
       padding: 25px 28px;
       font-family: Gotham Pro;
       font-size: 16px;
+      font-weight: bold;
       line-height: 23px;
       letter-spacing: 0.09em;
       text-transform: uppercase;
       color: #AAAAAA;
-    }
-    .order-info-header {
-      padding: 0;
-      border: none;
     }
     .btn-edit-order a {
       padding: 6px 10px;
@@ -43,7 +41,7 @@
       display: flex;
       flex-direction: column;
       margin: 0;
-      padding: 40px 28px;
+      padding: 25px 28px 30px 28px;
 
       .theme-form-field {
         width: auto;
@@ -71,8 +69,8 @@
 
   .checkout-total {
     padding: 15px 0;
-    border-top: 1px solid lightgray;
-    border-bottom: 1px solid lightgray;
+    border-top: 1px solid #EAEAEA;
+    border-bottom: 1px solid #EAEAEA;
     text-align: right;
   }
 
@@ -100,5 +98,87 @@
   }
   .btn-payment {
     padding: 8px 50px;
+  }
+}
+.checkout-total-price {
+  font-family: Gotham Pro;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #252525;
+}
+.check_svg{
+  margin: 12px 0px 0 3px;
+  width: 2.2em !important;
+  height: 1.9em !important;
+}
+.input_svg{
+  border: 1px solid #FED3E0;
+  width: 31px;
+  height: 31px;
+  cursor: pointer;
+
+  span {
+    margin: 4px 0 0 0;
+  }
+}
+.checkbox-label {
+  margin: 4px 0 0 0;
+}
+.MuiFormControl-root-1 {
+  width: 100%;
+}
+.flex-md-12 {
+  padding: 0 !important;
+  margin-left: 0 !important;
+  flex: 1;
+}
+.MuiFormControl-root-1 {
+  div:before {
+    border-bottom: 1px solid #EAEAEA !important;
+  }
+}
+
+@media (max-width: 1199px) {
+  .checkout {
+    .checkout-title {
+      justify-content: center;
+    }
+    .billing-address {
+      flex: auto;
+      border-width: 18px;
+    }
+    .order-info {
+      margin: 0 !important;
+      padding: 0 !important;
+      flex: auto;
+      border-width: 0 18px 18px;
+
+      .order-info-header {
+        padding: 35px 47px;
+      }
+      .order-info-body {
+        padding: 35px 47px;;
+        border-top: 1px solid #EAEAEA !important;
+      }
+      .checkout-total {
+        margin-left: 30%;
+      }
+    }
+    .theme-form {
+      padding: 20px 30px 20px;
+    }
+    .bottom-buttons {
+      width: 100%;
+      margin: 30px 0;
+
+      .btn-edit-order-bottom {
+        flex: 1;
+      }
+      .btn-payment {
+        flex: 2;
+      }
+    }
   }
 }
