--- a/src/scss/pages/payment.scss
+++ b/src/scss/pages/payment.scss
@@ -64,3 +64,16 @@
     justify-content: center;
   }
 }
+
+.order-info-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: Gotham Pro;
+  font-size: 16px;
+  font-weight: bold;
+  line-height: 23px;
+  letter-spacing: 0.09em;
+  text-transform: uppercase;
+  color: #AAAAAA;
+}
