--- a/src/scss/pages/cart.scss
+++ b/src/scss/pages/cart.scss
@@ -11,6 +11,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+    margin-bottom: 43px;
     align-items: center;
     .theme-page-title{
       font-size: 49px;
@@ -49,7 +50,7 @@
           border: 0;
 
           img {
-            object-fit: fill;
+            object-fit: contain;
             width: 70px;
             height: 70px;
           }
@@ -105,6 +106,9 @@
 }
 @media(max-width: 1050px) {
   .cart_view {
+    .cart-header{
+      margin-bottom:25px !important;
+    }
     margin-top: 43px !important;
     .cart-table-div{
       background-color: #faf8f9;
@@ -222,6 +226,8 @@
     display: flex;
     width: 100%;
   }
+
+
 }
 .breadcrumb-item.active {
   color: #000;
@@ -237,6 +243,7 @@
     padding:15px !important;
     margin-top:24px !important;
     .cart-header {
+      margin-bottom:25px !important;
       .theme-page-title{
         font-size:27px !important;
       }
@@ -268,7 +275,7 @@
       .theme-btn-primary {
         margin: 0 !important;
         padding:0;
-        margin-left:5px!important;
+        margin-left:5px !important;
       }
     }
   }
