favorite page responsive update

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -40,3 +40,4 @@
 @import 'pages/editgear';
 @import 'components/cart-modal';
 @import 'components/empty_activity';
+@import 'components/customspinner';
