--- a/src/scss/pages/editgear.scss
+++ b/src/scss/pages/editgear.scss
@@ -159,6 +159,10 @@
             }
             .kit-check{
               margin-left: 59px;
+              display: flex;
+              label {
+                margin-top:5px;
+              }
             }
           }
           .form-accessories{
