--- a/src/scss/pages/favourites.scss
+++ b/src/scss/pages/favourites.scss
@@ -67,6 +67,18 @@
         border-top: 2px #fef9f8 solid;
         .sm_favor_bottom_right {
           border-left:2px #fef9f8 solid;
+          P {
+            font-size: 12px;
+            letter-spacing: 0.03em;
+            color: #3A3A3A;
+            opacity: 0.5;
+            padding:0;
+            margin:0;
+            margin-top:12px;
+          }
+          .tb_pay_per {
+            font-weight: 800;
+          }
         }
         .bottom_left {
           padding:0;
@@ -99,4 +111,40 @@
   line-height: 18px;
   letter-spacing: 0.03em;
   color: #3A3A3A;
+}
+@media(max-width: 750px) {
+  .favo_table_root {
+    display: block;
+    padding: 0;
+
+    .sm_favor_table {
+      display: flex;
+      .sm_favor_name_closeicon{
+        padding-top: 0 !important;
+        .favourites_close_icon{
+            padding:10px!important;
+       }
+        .favourites_close_text{
+          margin-top:20px;
+        }
+      }
+      .favor_gear-img {
+        width: 70px;
+        height: 70px;
+        margin: 16px;
+
+      }
+      .bottom_left {
+        padding-left: 16px !important;
+      }
+    }
+  }
+  .md_show_buttons {
+    padding-top:12px!important;
+    margin:0;
+    .theme-btn-primary {
+      margin-left: 5px;
+      min-width: 100px;
+    }
+  }
 }
