--- a/src/scss/pages/payment.scss
+++ b/src/scss/pages/payment.scss
@@ -7,13 +7,22 @@
     margin-bottom: 25px;
   }
   .payment-card {
-    border: 1px solid lightgray;
-    padding: 10px;
-    width: 300px;
+    padding: 15px 20px;
+    width: 49%;
+    min-height: 180px;
+    box-shadow: 0px 2px 22px -2px rgba(173, 173, 173, 0.2);
+    border-radius: 10px;
 
     .payment-card-number {
       font-weight: bold;
       margin-top: 20px;
+      min-height: 25px;
+      font-family: Gotham Pro;
+      font-size: 18px;
+      line-height: 25px;
+      letter-spacing: 0.14em;
+      text-transform: uppercase;
+      color: #000000;
     }
 
     .payment-card-other {
@@ -31,8 +40,8 @@
   .payment-success-info {
     margin-top: 15px;
     display: flex;
-    border: 10px solid lightgray;
-    padding: 15px;
+    border: 30px solid #FAF8F9;
+    padding: 30px;
     justify-content: space-between;
 
     span {
@@ -76,4 +85,79 @@
   letter-spacing: 0.09em;
   text-transform: uppercase;
   color: #AAAAAA;
+}
+
+#select-month {
+  width: 45%;
+  margin-top: -16px;
+  label {
+    margin-left: 10px;
+    font-size: 13px;
+    color: #7C7C7C;
+  }
+  div:before, div:after {
+    border-bottom: solid 1px #EAEAEA !important;
+  }
+  div div div {
+    padding-left: 10px;
+  }
+}
+#select-day {
+  width: 45%;
+  div div div {
+    padding-left: 10px;
+  }
+  div:before, div:after {
+    border-bottom: solid 1px #EAEAEA !important;
+  }
+}
+.date-select-container {
+  justify-content: space-between;
+}
+.payment-card-other {
+  justify-content: space-between;
+  margin-top: 43px !important;
+}
+.card-expiration-date, .card-holder {
+  font-family: Helvetica Neue;
+  font-size: 12px;
+  line-height: 18px;
+  letter-spacing: 0.03em;
+  color: #000000;
+  opacity: 0.6;
+}
+
+@media (max-width: 1199px) {
+  .payment-card {
+    width: 49% !important;
+  }
+}
+
+@media (max-width: 767px) {
+  .payment-card {
+    width: 100% !important;
+  }
+  .flex-md-12 {
+    width: 100%;
+  }
+  .theme-form .theme-form-field {
+    margin-left: 0 !important;
+  }
+  .card-info-wrapper {
+    .flex-row {
+      display: block !important;
+    }
+  }
+  .card-expiration-date {
+    float: left;
+  }
+  .card-holder {
+    float: right;
+  }
+}
+
+@media (max-width: 375px) {
+  .btn-payment {
+    padding: 8px !important;
+  }
 }
