code refactor, checkout, payment

--- a/src/scss/pages/checkout.scss
+++ b/src/scss/pages/checkout.scss
@@ -118,9 +118,9 @@
   width: 31px;
   height: 31px;
   cursor: pointer;
-
-  span {
-    margin: 4px 0 0 0;
+  input {
+    width: 100% !important;
+    height: 100% !important;
   }
 }
 .checkbox-label {
