Gear History Page Calendar Update

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -41,3 +41,4 @@
 @import 'components/cart-modal';
 @import 'components/empty_activity';
 @import 'components/customspinner';
+@import 'components/calendar/calendar';
