--- a/src/scss/pages/favourites.scss
+++ b/src/scss/pages/favourites.scss
@@ -29,7 +29,7 @@
   }
 }
 .wrraper {
-  background-color: #f3f3f3;
+  background-color: #faf8f9;
   text-align: center;
 }
 @media(max-width: 1050px){
