--- a/src/scss/pages/list-gear.scss
+++ b/src/scss/pages/list-gear.scss
@@ -227,7 +227,7 @@
     font-size: 12px !important;
   }
   .list-gear .list-gear-body .wrraper .listing-data-slice td {
-    border-top: 18px solid #f3f3f3 !important;
+    border-top: 18px solid #faf8f9 !important;
   }
   .list-gear .list-gear-body .wrraper {
     padding: 5px 10px;
@@ -277,7 +277,7 @@
   }
 
   .listing-data-slice{
-    background-color: #f3f3f3 !important;
+    background-color: #faf8f9 !important;
   .card {
     margin:16px;
   }
