--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,14 +2,11 @@ $primary-color: #f82462;
 $primary-light-color: #fa6691;
 $primary-color-alpha: #f82462b8;
 $primary-color-disabled: rgba(248, 44, 98, 0.31);
-
 $secondary-color: #252525;
 $secondary-light-color: #3a3a3a;
-
 $white: #fff;
-$gray-light: #f3f3f3;
+$gray-light: #faf8f9;
 $gray-lighten: #f8f8f8;
-
 $navbar-height-lg: 127px;
 $navbar-height-md: 93px;
 $navbar-height-sm: 70px;
